--- a/doc/SpecificaTecnica/SpecificaTecnica.tex
+++ b/doc/SpecificaTecnica/SpecificaTecnica.tex
@@ -1043,11 +1043,31 @@ Un secondo problema prestazionale \`e rappresentato dal fatto che l'applicazione
      \hline
      SVGWriter & RFO-15 \\
      \hline
-     SVGReader & RFO-16 \\
+     SVGWritable & RFO-15\\
+     \hline
+     SVGReader & RFO-16\\
+     \hline
+     SVGGenerator & RFO-15, RFO-16\\
+     \hline
+     SVGElementRegistry & RFO-16\\
+     \hline
+     SVGReadable & RFO-16\\
+     \hline
+     SVGReadableClass & RFO-16\\
+     \hline
+     SVGTag & RFO-16\\
+     \hline
+     XMLParser & RFO-16\\
+     \hline
+     FigureSet & RFO-8, RFO-12 \\
+     \hline
+     Figure & RFO-8, RFO-12 \\
      \hline
      Manual & RIO-2, RIO-3 \\
      \hline
-     FreeLine & RFO-1 \\
+     StaticDocument & RIO-2, RIO-3 \\
+     \hline
+     StraightLine & RFO-1 \\
      \hline
      BezierCurve & RFO-2 \\
      \hline
@@ -1055,19 +1075,35 @@ Un secondo problema prestazionale \`e rappresentato dal fatto che l'applicazione
      \hline
      Polygon & RFO-4 \\ 
      \hline
+     EdgeNumebr & RFO-4 \\
+     \hline
      Circle & RFO-5 \\
      \hline
-     Text & RFO-6 \\
+     Text & RFO-6, RFO-7 \\
      \hline
      TextProperty & RFO-7 \\
      \hline
-     FigureSet & RFO-8\\
+     TextFont & RFO-7 \\
+     \hline
+     TextSize & RFO-7\\
      \hline
      Colour & RFO-9 \\
      \hline
+     FillColour & RFO-9 \\
+     \hline
+     TextColour & RFO-9 \\
+     \hline
+     Opacity & RFO-9 \\
+     \hline
+     CssProperty & RFO-9 \\
+     \hline
+     BoundingRectangle & RFO-10 \\
+     \hline
      Property & RFO-12 \\
      \hline
-     Line & RFD-1 \\ 
+     FreeLine & RFD-1 \\ 
+     \hline
+     Line & RFO-1, RFD-1 \\
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%
     \hline %%FINE RIGA
 %%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -1082,20 +1118,38 @@ Un secondo problema prestazionale \`e rappresentato dal fatto che l'applicazione
      \begin{tabular}
            {@{\extracolsep{\fill}}|c|c|}
            \hline
-           \multicolumn{2}{|c|}{ \textbf{Componenti DocBackEnd} }\\
+           \multicolumn{2}{|c|}{ \textbf{Componenti DocBackend} }\\
      \hline
 %%%%%%%%%%%%%%INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
       \textbf{Componenti} & \textbf{Requisiti} \\
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
       \hline
      Document & RFO-15, RFO-16 \\
+     \hline
+     Request & RFO-15, RFO-16 \\
+     \hline
+     CommunicationError & RFO-15, RFO-16 \\
+     \hline
+     ConnectionError & RFO-15, RFO-16 \\
+     \hline
+     ServerError & RFO-15, RFO-16 \\
+     \hline
+     Server & RFO-15, RFO-16 \\
+     \hline
+     StaticDocument & RFO-15, RFO-16 \\
+     \hline
+     FileNotFound & RFO-15 \\
+     \hline
+     File & RFO-15 \\
+     \hline
+     Clean & RFO-15 \\
          
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%
     \hline %%FINE RIGA
 %%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     \end{tabular}
-  \caption{Componenti DocBackEnd - Requisiti} %INSERIRE DIDASCALIA - SE NECESSARIA -
-  \label{tab:requisitiDocBackEnd}
+  \caption{Componenti DocBackend - Requisiti} %INSERIRE DIDASCALIA - SE NECESSARIA -
+  \label{tab:requisitiDocBackend}
   \end{center}
 \end{table}
 
