--- a/doc/PianoDiProgetto/PianoDiProgetto.tex
+++ b/doc/PianoDiProgetto/PianoDiProgetto.tex
@@ -5,7 +5,7 @@
 
 \begin{document}
 
-\renewcommand{\insertversion}{1.2} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
+\renewcommand{\insertversion}{2.0} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
 \renewcommand{\TITOLODOC}{Piano di Progetto} %INSERIRE IL TITOLO DEL DOCUMENTO DA FAR COMPARIRE A PIE PAGINA
 \renewcommand{\glosspath}{.\glossario} %INSERIRE PERCORSO RELATIVO
 
@@ -150,6 +150,8 @@ Il presente documento descrive l'analisi dei costi e delle risorse effettuata da
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		 \hline
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+			2.0 & 23/01/2009	Verifica in preparazione al rilascio & Bizzotto Piero \\
+			\hline
 			1.2 & 21/01/2009	Aggiunta consuntivi fase RR-RPP & Bizzotto Piero \\
 			\hline
 			1.1 & 17/01/2009	Aggiornamento in seguito all'esito della Revisione dei Requisiti & Bizzotto Piero \\
@@ -618,7 +620,7 @@ Per conoscenza del cliente, \`e fornita anche una stima approssimativa dell'impi
 \end{table}
 
 Come si pu\`o vedere dai dati precendentemente elencati si sono rivelate necessarie alcune modifiche rispetto al preventivo presentato:
-sono stati richiesti sforzi maggiori dal ruolo di amministratore per l' attuazione di piani e procedure di gestione della qualit\`a ed
+sono stati richiesti sforzi maggiori dal ruolo di amministratore per l'attuazione di piani e procedure di gestione della qualit\`a ed
 analista per analizzare pi\`u a fondo i requisiti. I ruoli di responsabile, progettista e verificatore hanno invece richiesto minori
 risorse del previsto anche grazie al buon lavoro svolto nella fase PRE-RR.
 
