sistemazioni suggerite da verificatore

--- a/doc/PianoDiQualifica/PianoDiQualifica.tex
+++ b/doc/PianoDiQualifica/PianoDiQualifica.tex
@@ -5,7 +5,7 @@
  
 \begin{document}
  
-\renewcommand{\insertversion}{1.1} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
+\renewcommand{\insertversion}{2} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
 \renewcommand{\TITOLODOC}{Piano di qualifica} %INSERIRE IL TITOLO DEL DOCUMENTO DA FAR COMPARIRE A PIE PAGINA
 \renewcommand{\glosspath}{.\glossario} %INSERIRE PERCORSO RELATIVO
  
@@ -42,7 +42,7 @@
   \end{Huge}
       \\
 \end{center}
-\vspace{210pt}
+\vspace{190pt}
 \begin{center}
 Versione: \insertversion
 \end{center}
@@ -83,7 +83,7 @@ Il presente documento descrive le strategie per la gestione della qualit\`a adot
         Pre-RR & Dissegna Stefano\\
         \hline
         RR-RPP & Carollo Mirko\\
-                    & \\
+        
         \hline
         %%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%
       \end{tabular}
@@ -107,10 +107,10 @@ Il presente documento descrive le strategie per la gestione della qualit\`a adot
       \hline
       %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%    
       Pre-RR & Dal Bosco Davide\\
-                  & \\
+                 
       \hline
       RR-RPP & Geremia Mirco \\
-                  & \\
+                  
       \hline
       %%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     \end{tabular}
@@ -236,7 +236,7 @@ Per il tracciamento degli errori e delle loro soluzioni ci si avvarr\`a degli st
 \subsezione{Infrastrutture e procedure di automazione} 
 Hanno lo scopo di accelerare tutte le attivit\`a di verifica e impedire errori umani.
 Tali attivit\`a potranno quindi essere svolte dopo ogni singolo cambiamento, anche di piccola entit\`a. Saranno predisposte dai verificatori. 
-Verrano usati i seguenti prodotti: \textit{QUnit , JSCoverage, js2-mode, JSLint}. Tutti i dettagli delle attivit\`a di verifica sono gi\`a stati esposti nel paragrafo 2.1
+Verrano usati i seguenti prodotti: \textit{QUnit , JSCoverage, js2-mode, JSLint, FireBug}. Tutti i dettagli delle attivit\`a di verifica sono gi\`a stati esposti nel paragrafo 2.1
  
 \sezione{Gestione amministrativa della revisione}
  
