glossario: aggiunto termine, versione 2.0

--- a/doc/Glossario/Glossario.tex
+++ b/doc/Glossario/Glossario.tex
@@ -5,7 +5,7 @@
 
 \begin{document}
 
-\renewcommand{\insertversion}{1.2} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
+\renewcommand{\insertversion}{2.0} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
 \renewcommand{\TITOLODOC}{Glossario} %INSERIRE IL TITOLO DEL DOCUMENTO DA FAR COMPARIRE A PIE PAGINA
 \renewcommand{\glosspath}{.\glossario} %INSERIRE PERCORSO RELATIVO
 
@@ -140,6 +140,8 @@ Versione: \insertversion
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		 \hline
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+                    2.0 & 24$\slash$01$\slash$2009 Aggiunto termine, rilascio per RPP & Dissegna Stefano \\
+			\hline
 		    1.2 & 22$\slash$01$\slash$2009  Aggiunta altri termini & Cunico Marco \\
 			\hline
 		    1.1 & 20$\slash$01$\slash$2009  Aggiunta altri termini & Cunico Marco \\
@@ -208,6 +210,10 @@ HTML 5 \` e un \hyperlink{linguaggio di markup}{\underline{linguaggio di markup}
 \hypertarget{javascript}{}
 \textbf{JavaScript:}
 JavaScript (o ECMAScript) \`e un linguaggio di scripting orientato agli oggetti comunemente usato nei siti web. \`E  uno standard ISO.\\
+
+\hypertarget{JIT}{}
+\textbf{JIT:}
+Acronimo di Just In Time: si riferisce alla compilazione al volo di un programma un attimo prima della sua esecuzione.\\
 
 \section*{L}
 \hypertarget{latex}{}
