--- a/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
+++ b/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
@@ -2,7 +2,7 @@
 \usepackage{multirow}
 \begin{document}
 
-\renewcommand{\insertversion}{1.3} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
+\renewcommand{\insertversion}{2.0} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
 \renewcommand{\TITOLODOC}{Analisi dei Requisiti} %INSERIRE IL TITOLO DEL DOCUMENTO DA FAR COMPARIRE A PIE PAGINA
 
 \begin{titlepage}
@@ -141,6 +141,8 @@ Tale studio \`e mirato alla comprensione dei bisogni espressi nel capitolato e a
 
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
                 \hline
+				2.0 & 24$\slash$01$\slash$2009 Rilascio per RPP. & Dissegna Stefano \\
+		\hline
 				1.3 & 22$\slash$01$\slash$2009 Modifiche eseguite su segnalazione del verificatore.  & Cunico Marco \\
                 \hline
 				1.2 & 21$\slash$01$\slash$2009 Modifica ad U.C. Interazione.  & Cunico Marco \\
