--- a/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
+++ b/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
@@ -74,11 +74,11 @@ Tale studio \`e mirato alla comprensione dei bisogni espressi nel capitolato e a
 				%%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 				\hline
 				%%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%		
-				\multirow{2}{*}{Pre-RR} & Bizzotto Piero\\
+				\multirow{1}{*}{Pre-RR} & Bizzotto Piero\\
 										& Dissegna Stefano\\
 										& Carollo Mirko\\
 				\hline
-				\multirow{2}{*}{RR-RPP} & Cunico Marco\\
+				\multirow{1}{*}{RR-RPP} & Cunico Marco\\
 										& \\
 				\hline
 				%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -103,10 +103,10 @@ Tale studio \`e mirato alla comprensione dei bisogni espressi nel capitolato e a
 			%%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 			\hline
 			%%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%		
-			\multirow{2}{*}{Pre-RR}  &  Cunico Marco\\
+			\multirow{1}{*}{Pre-RR}  &  Cunico Marco\\
 									&  \\
 			\hline
-			\multirow{2}{*}{RR-RPP} & Geremia Mirco\\
+			\multirow{1}{*}{RR-RPP} & Geremia Mirco\\
 									& \\
 			\hline
 			%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -141,7 +141,7 @@ Tale studio \`e mirato alla comprensione dei bisogni espressi nel capitolato e a
 
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
                 \hline
-				2.0 & 24$\slash$01$\slash$2009 Rilascio per RPP. & Dissegna Stefano \\
+				2.0 & 24$\slash$01$\slash$2009 Rilascio per RPP. & Cunico Marco \\
 		\hline
 				1.3 & 22$\slash$01$\slash$2009 Modifiche eseguite su segnalazione del verificatore.  & Cunico Marco \\
                 \hline
