glossario: redazione/approvazione

--- a/doc/Glossario/Glossario.tex
+++ b/doc/Glossario/Glossario.tex
@@ -82,7 +82,7 @@ Versione: \insertversion
 				%%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%		
 				{Pre-RR} &  Bizzotto Piero \\ & Geremia Mirco \\
 				\hline
-				{RR-RPP} &  Cunico Marco \\ & \\
+				{RR-RPP} &  Cunico Marco \\ & Dissegna Stefano \\
 				\hline
 				%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%
 			\end{tabular}
@@ -107,7 +107,7 @@ Versione: \insertversion
 			%%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%		
 			{Pre-RR} &  Dissegna Stefano \\
 			\hline
-			{RR-RPP} & \\
+			{RR-RPP} & Geremia Mirco \\
 			\hline
 			%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		\end{tabular}
